# brotherql-cli

./: Pipfile  README.md  brotherql-cli.pkgproj  pyproject.toml
brotherql-cli-1.0.0/root/opt/brother-ql/: brotherql_cli-1.0.0-py3-none-any.whl
brotherql-cli-1.0.0/scripts/: preinstall
brotherql_cli/: appconfig.py  logging.py  main.py
brotherql_cli/cli/: exceptionhandle.py  main.py  print.py
brotherql_cli/cli/config/: __init__.py  definitions.py  info.py  read.py  refresh.py  set.py
brotherql_cli/label/: __init__.py  generation.py
brotherql_cli/printer/: interfacing.py  searching.py
printerutils/: searching.py
releases/: build.sh
releases/root/: brotherql_cli-1.0.0-py3-none-any.whl
src/brotherql_cli/: __main__.py  config.py  config.yaml  definitions.py
src/brotherql_cli/cli/: config.py  exceptionhandle.py  main.py
src/brotherql_cli/label/: generation.py
src/brotherql_cli/old/printer/: __init__.py  interfacing.py
src/brotherql_cli/old/printer/backends/: __init__.py  generic.py  helpers.py  network.py
src/brotherql_cli/printer/: __init__.py  interfacing.py  searching.py
utils/: ostools.py
